Refactor impl & tests of ParseListIntoStructure task